# brainfuck

./: .hlint.yaml  Brainfuck-Checks.html  Brainfuck-Configuration.html  Brainfuck-Interpreter-IO.html  Brainfuck-Interpreter.html  Brainfuck-LLVM-Codegen.html  Brainfuck-LLVM.html  Brainfuck-Optimizer.html  Brainfuck-Parser.html  Brainfuck-Syntax.html  Brainfuck.html  README.md  brainfuck.cabal  brainfuck.haddock  brainfuck.txt  doc-index.html  doc-index.json  flake.nix  index.html
.github/workflows/: main.yml  nix.yml  release.yml
app/: Main.hs
app/Brainfuck/: Options.hs
src/: Brainfuck.Checks.html  Brainfuck.Configuration.html  Brainfuck.Interpreter.IO.html  Brainfuck.Interpreter.html  Brainfuck.LLVM.Codegen.html  Brainfuck.LLVM.html  Brainfuck.Optimizer.html  Brainfuck.Parser.html  Brainfuck.Syntax.html  Brainfuck.hs  Brainfuck.html
src/Brainfuck/: Checks.hs  Configuration.hs  Interpreter.hs  LLVM.hs  Optimizer.hs  Parser.hs  Syntax.hs
src/Brainfuck/Interpreter/: IO.hs
src/Brainfuck/LLVM/: Codegen.hs
src/Language/: Brainfuck.hs
src/Language/Brainfuck/: Interpreter.hs  Parser.hs  Syntax.hs
src/Language/Brainfuck/Codegen/: LLVM.hs
src/Language/Brainfuck/Codegen/LLVM/: System.hs
src/Language/Brainfuck/Interpreter/: Internal.hs
