cabal-version: 2.4
name:          brainfuck
version:       0.4.0.0
synopsis:      Brainfuck Compiler and Interpreter
description:   Basic compiler and interpreter for the Brainfuck language using LLVM as a backend.
category:      Language
license:       ISC
license-file:  LICENSE
homepage:      https://github.com/pnotequalnp/brainfuck
bug-reports:   https://github.com/pnotequalnp/brainfuck/issues
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2022

source-repository head
  type: git
  location: https://github.com/pnotequalnp/brainfuck

common base
  default-language:   GHC2021
  ghc-options:        -Wall -Wcompat -Werror=incomplete-patterns -fno-show-valid-hole-fits
  default-extensions:
    BlockArguments
    DerivingVia
    DuplicateRecordFields
    ImplicitParams
    LambdaCase
    LexicalNegation
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RecursiveDo

  build-depends:
    , base ^>=4.16.0.0
    , bytestring
    , text

library
  import:          base
  hs-source-dirs:  src
  exposed-modules:
    Language.Brainfuck
    Language.Brainfuck.Codegen.LLVM
    Language.Brainfuck.Codegen.LLVM.System
    Language.Brainfuck.Interpreter
    Language.Brainfuck.Parser
    Language.Brainfuck.Syntax

  other-modules:
    Language.Brainfuck.Interpreter.Internal

  build-depends:
    , llvm-hs-pure
    , llvm-hs-pretty
    , monad-loops
    , mtl
    , temporary
    , typed-process
    , vector

executable brainfuck
  import:         base
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded
  other-modules:
    Paths_brainfuck

  autogen-modules:
    Paths_brainfuck

  build-depends:
    , brainfuck
    , optparse-applicative
