cabal-version: 3.0
name:          brainfuck
version:       0.5.0.0
license:       ISC
license-file:  LICENSE
copyright:     Kevin Mullins 2022
maintainer:    kevin@pnotequalnp.com
author:        Kevin Mullins
homepage:      https://github.com/pnotequalnp/brainfuck
bug-reports:   https://github.com/pnotequalnp/brainfuck/issues
synopsis:      Brainfuck Compiler and Interpreter
description:
    Basic compiler and interpreter for the brainfuck language using LLVM as a backend.

category:      Language

source-repository head
    type:     git
    location: https://github.com/pnotequalnp/brainfuck

common base
    default-language:   Haskell2010
    default-extensions:
        BangPatterns BlockArguments DerivingStrategies FlexibleInstances
        ImportQualifiedPost LambdaCase MultiParamTypeClasses NamedFieldPuns
        PatternSynonyms RecursiveDo ScopedTypeVariables TupleSections
        TypeApplications

    ghc-options:        -Wall -Wcompat -Werror=incomplete-patterns
    build-depends:
        base ^>=4.14.0,
        bytestring ^>=0.10.12,
        diagnose ^>=2.0.0

library
    import:          base
    exposed-modules:
        Brainfuck
        Brainfuck.Configuration
        Brainfuck.Interpreter
        Brainfuck.Interpreter.IO
        Brainfuck.LLVM
        Brainfuck.LLVM.Codegen
        Brainfuck.Optimizer
        Brainfuck.Parser
        Brainfuck.Syntax

    hs-source-dirs:  src
    build-depends:
        llvm-hs ^>=9.0.1,
        llvm-hs-pure ^>= 9.0.0,
        llvm-hs-pretty ^>=0.9.0,
        megaparsec ^>=9.2.0,
        mtl ^>=2.2.2,
        prettyprinter ^>=1.7.1,
        primitive ^>=0.7.3,
        recursion-schemes ^>=5.2.2,
        vector ^>=0.12.3

executable brainfuck
    import:          base
    main-is:         Main.hs
    hs-source-dirs:  app
    other-modules:
        Brainfuck.Options
        Paths_brainfuck

    autogen-modules: Paths_brainfuck
    build-depends:
        brainfuck,
        optparse-applicative ^>=0.16.1
